<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeActivity">

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/headerView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/linearTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_person_24"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="28dp"
                android:layout_toLeftOf="@+id/title"/>

            <TextView
                android:id="@+id/title"
                android:textColor="@color/colorWhite"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="32sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_favorite_border_white"
                android:layout_toRightOf="@+id/title"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="28dp"
                android:clickable="true"
                android:focusable="true" />



        </RelativeLayout>




    <androidx.cardview.widget.CardView
        android:id="@+id/cardSearch"
        android:layout_below="@id/linearTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="@string/search_your_recipes"
            android:textColor="@color/colorPrimaryLight"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_search_primary_light"
            android:drawableStart="@drawable/ic_search_primary_light"
            android:drawablePadding="10dp" />
    </androidx.cardview.widget.CardView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerHeader"
         android:foregroundGravity="center"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:layout_below="@id/cardSearch"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <include
                android:id="@+id/shimmerMeal"
                layout="@layout/item_view_pager_header_shimmer" />

            <TextView
                android:id="@+id/titleCategory"
                android:text="@string/meal_categories"
                android:textSize="19sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewPagerHeader" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCategory"
                android:scrollbars="none"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:layout_below="@id/titleCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="50dp" />

            <include
                android:id="@+id/shimmerCategory"
                layout="@layout/item_recycler_category_shimmer" />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>